# nomnom

./: .gitignore  .treeclipignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  INSTALL.md  README.md  cliff.toml  gen_icons.sh  justfile  release-plz.toml
.github/workflows/: release-assets.yml  release-plz.yml
src/: app.rs  main.rs
src/components/: flag_panel.rs  mod.rs  mode_selector.rs  output_log.rs  preset_panel.rs  terminal_panel.rs  url_bar.rs
src/core/: download_mode.rs  flags.rs  mod.rs  presets.rs  runner.rs
