[package]
name = "nomnom-app"
description = "YT-DLP GUI Wrapper, but it eats URLs and spits out videos. simple."
version = "0.1.0"
edition = "2024"
authors = ["SeyedAli <seyed.ali.devl@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/seyallius/nomnom"
repository = "https://github.com/seyallius/nomnom"
keywords = ["yt-dlp", "youtube", "yt-dlp-gui", "gui", "downloader"]
categories = ["download-tool", "downloader", "multimedia"]
rust-version = "1.88.0"

[dependencies]
dioxus = { version = "0.7.3", features = ["desktop"] }
dioxus-desktop = "0.7.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17.2"                    # native file dialog
dirs = "6"                      # platform dirs (Downloads, etc.)
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
